# gh-assets-downloader

./: .editorconfig  .trivyignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  trivyreport.txt
.github/workflows/: build_and_push.yml  docs.yml  lint.yml  release.yml  test.yml
docs/: api-documentation.md  branching-strategy.md  commands.md  continuous-integration-and-deployment.md  documentation.md  explanation.md  how-to-guides.md  index.md  openapi.json  project-structure.md  reference.md  references.md  todo.md  versioning.md  workflow.md
docs/diagrams/src/: workflow.puml
scripts/: create_openapi_json.py
src/my_package/: __init__.py  app.py
tests/: test_app.py
