[tool.poetry]
name = "my_package"
version = "0.2.7"
description = ""
authors = ["RobertoFioravanti <ing.roberto.fioravanti@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/p-gnd/python-project"
repository = "https://github.com/p-gnd/python-project"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"
black = "^24.3.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"


[tool.poetry.group.test.dependencies]
respx = "^0.21.0"
pytest-asyncio = "^0.23.6"
trio = "^0.25.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.15"
mkdocstrings = {extras = ["python"], version = "^0.24.1"}
mkdocs-render-swagger-plugin = "^0.1.1"


[tool.poetry.group.semver.dependencies]
python-semantic-release = "^7.32.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.mypy]
# 3rd party import
ignore_missing_imports = true
# dynamic typing
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = false
disallow_subclassing_any = true
# platform
python_version = "3.12"
# untyped
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
# None and Optional
no_implicit_optional = true
# Warnings
warn_return_any = false
warn_unreachable = true
# Misc
pretty = true


[tool.pytest.ini_options]
testpaths = ["src", "tests"]
addopts = "-p no:cacheprovider" # deactivating pytest caching.

[tool.coverage.report]
exclude_lines = [
'if __name__ == "__main__":', 
'def __repr__',
'def __str__',
'raise NotImplementedError'
]

[tool.semantic_release]
branch = "main"
version_variable = "src/my_package/__init__.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
version_source = "tag"
changelog_file = "CHANGELOG.md"             # changelog file
commit_version_number = true # required for version_source = "tag"
commit_message = "{version} [skip ci]" # skip triggering ci pipelines for version commits
tag_commit = true
upload_to_pypi = false
upload_to_release = false
hvcs = "github" # gitlab is also supported (hvcs = host version control system)


